syntax = "proto3";

package rivet.backend.pkg.faker.mm_lobby;

import "proto/common.proto";
import "proto/backend/matchmaker.proto";
import "svc/pkg/faker/types/build.proto";

message Request {
	optional rivet.common.Uuid namespace_id = 6;
	optional rivet.common.Uuid version_id = 7;
	uint32 max_players_normal = 1;
	uint32 max_players_direct = 2;
	uint32 max_players_party = 3;
	bool skip_set_ready = 4;
	optional rivet.backend.pkg.faker.build.Image image = 5;
}

message Response {
	rivet.common.Uuid lobby_id = 1;
	rivet.common.Uuid lobby_group_id = 2;
	rivet.common.Uuid game_id = 3;
	rivet.common.Uuid version_id = 4;
	rivet.common.Uuid namespace_id = 5;
	rivet.common.Uuid region_id = 6;
	rivet.common.Uuid run_id = 7;
}
